--- a/to_do_list/src/components/PostItNoteSection/SelectToDelete/SelectToDelete.css
+++ b/to_do_list/src/components/PostItNoteSection/SelectToDelete/SelectToDelete.css
@@ -49,7 +49,6 @@
     transition: background-color ease 0.3s,
                 box-shadow ease 0.3s,
                 border ease 0.3s;
-    border: 1px solid black;
 }
 
 .select-to-delete--task:hover {
